# process

./: CMakeLists.txt
include/bunsan/interprocess/sync/: file_guard.hpp  file_lock.hpp
include/bunsan/process/: context.hpp  context_forward.hpp  error.hpp  execute.hpp  executor.hpp  file_action.hpp  mock_executor.hpp  native_executor.hpp  path.hpp  signal.hpp
include/bunsan/process/detail/: context.hpp  descriptor.hpp  error.hpp  execute.hpp  file_action.hpp  path.hpp
include/bunsan/process/file/: action.hpp  error.hpp  handle.hpp
src/interprocess/sync/: file_guard.cpp  file_lock.cpp
src/process/: aliases.cpp  context.cpp  error.cpp  execute.cpp  executor.cpp  native_executor.cpp  path.cpp
src/process/detail/: descriptor.cpp
src/process/detail/unix/: descriptor.cpp  descriptor.hpp  error.hpp  execute.cpp  executor.cpp  executor.hpp  open.cpp  open.hpp  path.cpp
src/process/detail/win32/: execute.cpp  path.cpp
src/process/file/: handle.cpp
src/process/unix/: path.cpp  signal.cpp
src/process/win32/: path.cpp
tests/: CMakeLists.txt  execute.cpp  file_guard.cpp  process.cpp
tests/unix/: process.cpp
tests/win32/: process.cpp
